--- a/02_Python基础/0210_字典.ipynb
+++ b/02_Python基础/0210_字典.ipynb
@@ -1007,6 +1007,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-28T02:24:10.814938Z",
+     "start_time": "2022-06-28T02:24:10.808159Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sales_qty_lag1': 'sum', 'sales_qty_lag2': 'sum', 'sales_qty_lag3': 'sum', 'festival': 'first'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字段新增元素；\n",
+    "features=['sales_qty_lag1','sales_qty_lag2','sales_qty_lag3', 'festival','except']\n",
+    "cate_features = ['festival']\n",
+    "feature_dict={}\n",
+    "\n",
+    "for feature in features:\n",
+    "    if feature in cate_features:\n",
+    "        feature_dict[feature] = 'first'\n",
+    "    elif 'sales_qty' in str(feature):\n",
+    "        feature_dict[feature] = 'sum'\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "print(feature_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
