--- a/03-numpy/0303_Numpy 数组及其索引.ipynb
+++ b/03-numpy/0303_Numpy 数组及其索引.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T14:38:42.318505Z",
-     "start_time": "2022-05-06T14:38:41.516390Z"
+     "end_time": "2022-07-01T00:44:21.386585Z",
+     "start_time": "2022-07-01T00:44:10.929811Z"
     }
    },
    "outputs": [],
@@ -45,7 +45,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-01T00:44:24.153867Z",
+     "start_time": "2022-07-01T00:44:24.144467Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -73,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T14:38:50.893279Z",
-     "start_time": "2022-05-06T14:38:50.876404Z"
+     "end_time": "2022-07-01T00:44:29.771824Z",
+     "start_time": "2022-07-01T00:44:29.768126Z"
     }
    },
    "outputs": [
@@ -87,7 +92,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +119,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-01T00:44:33.067550Z",
+     "start_time": "2022-07-01T00:44:33.064140Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -187,6 +197,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-01T00:44:59.048108Z",
+     "start_time": "2022-07-01T00:44:59.044597Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matao\n",
+    "a.itemsize # python 3变成8个字节了？"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -195,16 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-01T00:46:29.710374Z",
+     "start_time": "2022-07-01T00:46:29.707055Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4L,)"
+       "(4,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
