--- a/03-numpy/0304_数组类型.ipynb
+++ b/03-numpy/0304_数组类型.ipynb
@@ -706,11 +706,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T22:59:44.236583Z",
-     "start_time": "2022-05-06T22:59:44.222924Z"
+     "end_time": "2022-07-13T08:22:48.364248Z",
+     "start_time": "2022-07-13T08:22:47.465051Z"
     }
    },
    "outputs": [],
@@ -720,11 +720,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T22:59:44.985745Z",
-     "start_time": "2022-05-06T22:59:44.965796Z"
+     "end_time": "2022-07-13T08:28:05.323163Z",
+     "start_time": "2022-07-13T08:28:05.318921Z"
     }
    },
    "outputs": [
@@ -734,7 +734,7 @@
        "array([ 1.5, -3. ], dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,6 +779,31 @@
    ],
    "source": [
     "asarray(a, dtype=float64) # 应该是float 类型默认是float64，所以不会展示dtype，如果特意指定为float32的话，就会展示出来"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:23:36.844699Z",
+     "start_time": "2022-07-13T08:23:36.839914Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1, 253], dtype=uint8)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asarray(a, dtype=uint8)\n"
    ]
   },
   {
@@ -882,8 +907,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:27:54.335113Z",
+     "start_time": "2022-07-13T08:27:54.330869Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -891,7 +921,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +961,7 @@
     }
    ],
    "source": [
-    "a.astype(float64) # 这里就要区分和asarray的区别"
+    "a.astype(float64) # 这里就要区分和asarray的区别，其实就是写法不一样。。。。"
    ]
   },
   {
