--- a/03-numpy/0305_数组方法.ipynb
+++ b/03-numpy/0305_数组方法.ipynb
@@ -299,18 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:32:34.050104Z",
+     "start_time": "2022-07-13T08:32:33.131248Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.444,  0.06 ,  0.668,  0.02 ],\n",
-       "       [ 0.793,  0.302,  0.81 ,  0.381],\n",
-       "       [ 0.296,  0.182,  0.345,  0.686]])"
+       "array([[0.079, 0.168, 0.696, 0.789],\n",
+       "       [0.368, 0.637, 0.726, 0.966],\n",
+       "       [0.015, 0.525, 0.683, 0.691]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +352,7 @@
    ],
    "source": [
     "a = rand(3, 4)\n",
-    "%precision 3 # 这个方法厉害呀！！\n",
+    "%precision 3 # 这个方法厉害呀！！，设置小数点的精度；（全局设置）\n",
     "a\n",
     "# 这里直接用的%pylab，没有再import 也可以使用；\n"
    ]
@@ -854,17 +859,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:35:13.564566Z",
+     "start_time": "2022-07-13T08:35:13.560780Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
+       "array([[0.079, 0.168, 0.696, 0.789],\n",
+       "       [0.368, 0.637, 0.726, 0.966],\n",
+       "       [0.015, 0.525, 0.683, 0.691]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,17 +886,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:35:22.643964Z",
+     "start_time": "2022-07-13T08:35:22.639526Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[3, 3, 3],\n",
-       "       [4, 5, 5]])"
+       "array([[3., 3., 3., 3.],\n",
+       "       [3., 3., 3., 3.],\n",
+       "       [3., 3., 3., 3.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,6 +916,16 @@
    "metadata": {},
    "source": [
     "小于3的变成3，大于5的变成5。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matao：神奇，且很少用到；\n",
+    "# 一般应该在后处理的时候会用到；"
    ]
   },
   {
@@ -917,22 +944,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:36:33.142072Z",
+     "start_time": "2022-07-13T08:36:33.138255Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 2])"
+       "array([0.71 , 0.598, 0.676])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.ptp(axis=1)"
+    "a.ptp(axis=1) # axis=1 进行列操作"
    ]
   },
   {
