--- a/03-numpy/0309_data-to-&-from-string.ipynb
+++ b/03-numpy/0309_data-to-&-from-string.ipynb
@@ -18,7 +18,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:56:45.708291Z",
+     "start_time": "2022-07-13T08:56:44.730371Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -28,12 +31,77 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:56:47.562515Z",
+     "start_time": "2022-07-13T08:56:47.559667Z"
+    }
+   },
    "outputs": [],
    "source": [
     "a = np.array([[1,2],\n",
     "           [3,4]], \n",
     "          dtype = np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:56:56.562540Z",
+     "start_time": "2022-07-13T08:56:56.551635Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-f5009647b678>:2: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
+      "  a.tostring()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x01\\x02\\x03\\x04'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matao\n",
+    "a.tostring() # 发现python3中 tostring() 已经过时，推荐使用 tobytes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:57:44.914599Z",
+     "start_time": "2022-07-13T08:57:44.910485Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x01\\x02\\x03\\x04'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matao\n",
+    "a.tobytes()"
    ]
   },
   {
