--- a/03-numpy/0310_array-attribute-&-method-overview-.ipynb
+++ b/03-numpy/0310_array-attribute-&-method-overview-.ipynb
@@ -34,7 +34,8 @@
     "|`a.fill(value)`| 将数组的元组设置为特定值\n",
     "|4|**转化**\n",
     "|`a.tolist()`|将数组转化为列表\n",
-    "|`a.tostring()`|转换为字符串\n",
+    "|`a.tostring()`|转换为字符串，python3不用，过时了\n",
+    "|`a.tobytes()`|转换为字符串，python3用这个\n",
     "|`a.astype(dtype)`|转化为指定类型\n",
     "|`a.byteswap(False)`|转换大小字节序\n",
     "|`a.view(type_or_dtype)`|生成一个使用相同内存，但使用不同的表示方法的数组\n",
