--- a/03-numpy/0312_matrix-object.ipynb
+++ b/03-numpy/0312_matrix-object.ipynb
@@ -17,7 +17,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T11:36:50.657139Z",
+     "start_time": "2022-07-13T11:36:49.701131Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -39,6 +44,15 @@
     "              [7,8,9]])\n",
     "A = np.mat(a)\n",
     "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matao: 可以看到上面类型变成了matrix 矩阵"
    ]
   },
   {
