--- a/03-numpy/0313_general-functions.ipynb
+++ b/03-numpy/0313_general-functions.ipynb
@@ -11,7 +11,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-07-13T11:37:58.240214Z",
+     "start_time": "2022-07-13T11:37:57.315421Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -302,24 +305,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T11:39:36.768649Z",
+     "start_time": "2022-07-13T11:39:36.757595Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Miniconda\\lib\\site-packages\\IPython\\kernel\\__main__.py:1: RuntimeWarning: invalid value encountered in divide\n",
-      "  if __name__ == '__main__':\n"
+      "<ipython-input-2-413e00c843bd>:1: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.array([0]) / 0.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ nan])"
+       "array([nan])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,26 +352,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T11:39:42.485328Z",
+     "start_time": "2022-07-13T11:39:42.480633Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Miniconda\\lib\\site-packages\\IPython\\kernel\\__main__.py:2: RuntimeWarning: divide by zero encountered in divide\n",
-      "  from IPython.kernel.zmq import kernelapp as app\n",
-      "c:\\Miniconda\\lib\\site-packages\\IPython\\kernel\\__main__.py:2: RuntimeWarning: invalid value encountered in divide\n",
-      "  from IPython.kernel.zmq import kernelapp as app\n"
+      "<ipython-input-3-76d2897f08b8>:2: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  b = a / 0.0\n",
+      "<ipython-input-3-76d2897f08b8>:2: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  b = a / 0.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ nan,  inf,  inf,  inf,  inf])"
+       "array([nan, inf, inf, inf, inf])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,6 +385,31 @@
     "a = np.arange(5.0)\n",
     "b = a / 0.0\n",
     "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T11:39:44.836602Z",
+     "start_time": "2022-07-13T11:39:44.833067Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 2., 3., 4.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
