--- a/03-numpy/0315_binary-operators.ipynb
+++ b/03-numpy/0315_binary-operators.ipynb
@@ -11,7 +11,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-07-13T11:45:42.078399Z",
+     "start_time": "2022-07-13T11:45:41.161420Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -142,7 +145,7 @@
     }
    ],
    "source": [
-    "np.multiply(a, b, a)"
+    "np.multiply(a, b, a) # matao：腻害！"
    ]
   },
   {
