--- a/02_Python基础/0211_集合.ipynb
+++ b/02_Python基础/0211_集合.ipynb
@@ -168,14 +168,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-07-12T07:47:16.539163Z",
+     "start_time": "2022-07-12T07:47:16.536241Z"
+    }
    },
    "outputs": [],
    "source": [
     "a = {1, 2, 3, 4}\n",
     "b = {3, 4, 5, 6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-12T07:48:02.918415Z",
+     "start_time": "2022-07-12T07:48:02.916165Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "c = {2,3,4,1,1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-12T07:48:03.815093Z",
+     "start_time": "2022-07-12T07:48:03.811683Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 相等判断\n",
+    "\n",
+    "a == c"
    ]
   },
   {
