--- a/03-numpy/0303_Numpy 数组及其索引.ipynb
+++ b/03-numpy/0303_Numpy 数组及其索引.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-01T00:44:21.386585Z",
-     "start_time": "2022-07-01T00:44:10.929811Z"
+     "end_time": "2022-07-13T08:06:08.949018Z",
+     "start_time": "2022-07-13T08:06:08.035568Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-01T00:44:24.153867Z",
-     "start_time": "2022-07-01T00:44:24.144467Z"
+     "end_time": "2022-07-13T08:06:14.103307Z",
+     "start_time": "2022-07-13T08:06:14.093241Z"
     }
    },
    "outputs": [
@@ -81,8 +81,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-01T00:44:29.771824Z",
-     "start_time": "2022-07-01T00:44:29.768126Z"
+     "end_time": "2022-07-13T08:06:21.696767Z",
+     "start_time": "2022-07-13T08:06:21.692676Z"
     }
    },
    "outputs": [
@@ -452,7 +452,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "但是与列表不同，数组中要求所有元素的 `dtype` 是一样的，如果传入参数的类型与数组类型不一样，需要按照已有的类型进行转换。"
+    "但是与列表不同，数组中要求所有元素的 `dtype` 是一样的，如果传入参数的类型与数组类型不一样，需要按照已有的类型进行转换。\n",
+    "\n",
+    "matao：这点再强调一下，今天同事遇到了类似的疑问。（2022-07-13 16:10:07）"
    ]
   },
   {
@@ -473,8 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:10:44.635554Z",
+     "start_time": "2022-07-13T08:10:44.631803Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -482,14 +489,16 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = array([0, 1, 2, 3])\n",
-    "a[0]"
+    "a[0]\n",
+    "# matao：所以这里的索引也是从0开始的。\n",
+    "# 具体为什么从0开始，后面遇到贴个链接来，这里忘记了。可能和计算机二进制有关；"
    ]
   },
   {
@@ -529,8 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:10:49.235099Z",
+     "start_time": "2022-07-13T08:10:49.230539Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -538,7 +552,7 @@
        "array([12, 13])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,8 +658,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:12:49.166863Z",
+     "start_time": "2022-07-13T08:12:49.164436Z"
+    }
+   },
    "outputs": [],
    "source": [
     "od = array([21000, 21180, 21240, 22100, 22400])"
@@ -676,7 +695,9 @@
    ],
    "source": [
     "dist = od[1:] - od[:-1]\n",
-    "dist"
+    "dist\n",
+    "\n",
+    "# matao: 妙啊"
    ]
   },
   {
@@ -713,8 +734,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:16:12.334587Z",
+     "start_time": "2022-07-13T08:16:12.330324Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -723,7 +749,7 @@
        "       [10, 11, 12, 13]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,16 +773,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:14:55.786261Z",
+     "start_time": "2022-07-13T08:14:55.782851Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2L, 4L)"
+       "(2, 4)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,8 +812,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:15:01.769873Z",
+     "start_time": "2022-07-13T08:15:01.766521Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -790,7 +826,7 @@
        "8"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +894,35 @@
     }
    ],
    "source": [
-    "a[1, 3]"
+    "a[1, 3]\n",
+    "\n",
+    "# matao： 行，列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:16:24.852760Z",
+     "start_time": "2022-07-13T08:16:24.849396Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [10, 11, 12, 13]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a # 行列的索引都是从0开始的。"
    ]
   },
   {
@@ -1730,11 +1794,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T22:45:09.911240Z",
-     "start_time": "2022-05-06T22:45:09.903815Z"
+     "end_time": "2022-07-13T08:17:52.323435Z",
+     "start_time": "2022-07-13T08:17:52.320908Z"
     }
    },
    "outputs": [],
@@ -1751,11 +1815,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T22:45:12.556552Z",
-     "start_time": "2022-05-06T22:45:12.543006Z"
+     "end_time": "2022-07-13T08:17:54.772749Z",
+     "start_time": "2022-07-13T08:17:54.769257Z"
     }
    },
    "outputs": [
@@ -1765,7 +1829,7 @@
        "array([False,  True, False,  True])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,6 +2227,122 @@
    "source": [
     "where(a > 12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-26T02:23:04.255642Z",
+     "start_time": "2022-07-26T02:23:02.739880Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([list([1, 1, 1]), list([2, 2, 2])], dtype=object)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.Series([[1,1,1],[2,2,2]]).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-26T02:23:13.496422Z",
+     "start_time": "2022-07-26T02:23:13.491096Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [1, 1, 1]\n",
+       "1    [2, 2, 2]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series([[1,1,1],[2,2,2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-26T02:28:24.992967Z",
+     "start_time": "2022-07-26T02:28:24.990406Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "b = pd.Series([1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-26T02:28:29.223737Z",
+     "start_time": "2022-07-26T02:28:29.218486Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3\n",
+       "1    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date_col = pd.to_datetime(b)\n",
+    "date_col.dt.weekday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
