--- a/03-numpy/0306_数组排序.ipynb
+++ b/03-numpy/0306_数组排序.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T23:20:25.184602Z",
-     "start_time": "2022-05-06T23:20:24.219147Z"
+     "end_time": "2022-07-13T08:38:18.119021Z",
+     "start_time": "2022-07-13T08:38:16.557252Z"
     }
    },
    "outputs": [
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-06T23:20:26.729427Z",
-     "start_time": "2022-05-06T23:20:26.713936Z"
+     "end_time": "2022-07-13T08:38:19.826085Z",
+     "start_time": "2022-07-13T08:38:19.818249Z"
     }
    },
    "outputs": [
@@ -60,7 +60,7 @@
        "array([20.8, 53.4, 61.8, 93.2])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,6 +70,15 @@
     "weights = array([20.8, 93.2, 53.4, 61.8])\n",
     "\n",
     "sort(weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matao：这里直接用了sort()，实际上是np.sort()，因为 %pylab 已经做了import"
    ]
   },
   {
@@ -215,16 +224,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:43:41.942696Z",
+     "start_time": "2022-07-13T08:43:41.938492Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 3, 1], dtype=int64)"
+       "array([0, 2, 3, 1])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,16 +257,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:43:48.480692Z",
+     "start_time": "2022-07-13T08:43:48.476504Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 20.8,  93.2,  53.4,  61.8])"
+       "array([20.8, 93.2, 53.4, 61.8])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,9 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:43:52.793462Z",
+     "start_time": "2022-07-13T08:43:52.791078Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -281,16 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:43:57.192626Z",
+     "start_time": "2022-07-13T08:43:57.188601Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 20.8,  53.4,  61.8,  93.2])"
+       "array([20.8, 53.4, 61.8, 93.2])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
