--- a/03-numpy/0307_数组形状.ipynb
+++ b/03-numpy/0307_数组形状.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-07T00:14:56.020524Z",
-     "start_time": "2022-05-07T00:14:54.997178Z"
+     "end_time": "2022-07-13T08:46:00.747354Z",
+     "start_time": "2022-07-13T08:45:59.560438Z"
     }
    },
    "outputs": [
@@ -373,11 +373,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-07T00:23:25.689291Z",
-     "start_time": "2022-05-07T00:23:25.683835Z"
+     "end_time": "2022-07-13T08:46:08.532992Z",
+     "start_time": "2022-07-13T08:46:08.530330Z"
     }
    },
    "outputs": [],
@@ -388,11 +388,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-07T00:23:27.621256Z",
-     "start_time": "2022-05-07T00:23:27.614142Z"
+     "end_time": "2022-07-13T08:46:14.486178Z",
+     "start_time": "2022-07-13T08:46:14.480015Z"
     }
    },
    "outputs": [
@@ -404,7 +404,7 @@
        "       [[3, 4, 5]]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,16 +415,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:46:32.703831Z",
+     "start_time": "2022-07-13T08:46:32.700371Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2L, 3L)"
+       "(2, 1, 3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:46:39.164997Z",
+     "start_time": "2022-07-13T08:46:39.161142Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,11 +803,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-07T00:26:43.326493Z",
-     "start_time": "2022-05-07T00:26:43.314480Z"
+     "end_time": "2022-07-13T08:47:10.464501Z",
+     "start_time": "2022-07-13T08:47:10.460875Z"
     }
    },
    "outputs": [
@@ -1000,6 +1030,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:48:29.691770Z",
+     "start_time": "2022-07-13T08:48:29.688063Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2],\n",
+       "       [10, 11, 12],\n",
+       "       [50, 51, 52],\n",
+       "       [60, 61, 62]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matao\n",
+    "vstack((x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -1020,6 +1079,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:48:39.495457Z",
+     "start_time": "2022-07-13T08:48:39.491859Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2, 50, 51, 52],\n",
+       "       [10, 11, 12, 60, 61, 62]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matao\n",
+    "hstack((x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -1036,6 +1122,38 @@
    ],
    "source": [
     "dstack((x, y)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:48:56.255826Z",
+     "start_time": "2022-07-13T08:48:56.252163Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0, 50],\n",
+       "        [ 1, 51],\n",
+       "        [ 2, 52]],\n",
+       "\n",
+       "       [[10, 60],\n",
+       "        [11, 61],\n",
+       "        [12, 62]]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matao\n",
+    "dstack((x, y))"
    ]
   },
   {
