--- a/03-numpy/0308_对角线.ipynb
+++ b/03-numpy/0308_对角线.ipynb
@@ -18,7 +18,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:51:26.414475Z",
+     "start_time": "2022-07-13T08:51:25.455559Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -35,7 +38,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:51:48.872741Z",
+     "start_time": "2022-07-13T08:51:48.861017Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -66,7 +74,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:51:57.782808Z",
+     "start_time": "2022-07-13T08:51:57.778914Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -93,7 +106,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:52:22.728093Z",
+     "start_time": "2022-07-13T08:52:22.724385Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -108,6 +126,32 @@
    ],
    "source": [
     "a.diagonal(offset=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:53:00.232225Z",
+     "start_time": "2022-07-13T08:53:00.228241Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=int64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matao\n",
+    "a.diagonal(offset=100) # 超出范围不会报错，直接返回None"
    ]
   },
   {
@@ -155,7 +199,8 @@
    ],
    "source": [
     "i = [0,1,2]\n",
-    "a[i, i]"
+    "a[i, i]\n",
+    "# 返回的是array"
    ]
   },
   {
@@ -193,6 +238,31 @@
    "metadata": {},
    "source": [
     "修改次对角线的值："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-07-13T08:55:36.278162Z",
+     "start_time": "2022-07-13T08:55:36.274727Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to function call (<ipython-input-13-67c1325485fd>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-67c1325485fd>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    a.diagonal() = 2\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot assign to function call\n"
+     ]
+    }
+   ],
+   "source": [
+    "# matao： 能不能用diagonal 修改对角线的值？看来是不行的！\n",
+    "\n",
+    "a.diagonal() = 2\n"
    ]
   },
   {
